--- a/assets/style/layout/layout.css
+++ b/assets/style/layout/layout.css
@@ -8,7 +8,7 @@
 }
 
 .padding-inline-box {
-    padding-inline: 5vw;
+    padding-inline: var(--page-padding);
 }
 
 .dp-spc-btwn {
@@ -20,4 +20,10 @@
 
 .wth-bg {
     background-color: var(--white-color);
+}
+
+.bg-image {
+    background-image: url("../../images/main-bg.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
