--- a/assets/style/base/sizes.css
+++ b/assets/style/base/sizes.css
@@ -5,5 +5,6 @@
     --gap4-big: 4rem;
     --gap5-small: 1rem;
     --gap6-bigger: 5rem;
-    --page-padding: 5rem;
+    --gap7: 1.8rem;
+    --page-padding: clamp(.5rem, 1rem + 5vw, 5rem);
 }
