--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -60,6 +60,11 @@
 @import url("modules/gallery/container-images.css");
 
 
+/* pricing section */
+
+@import url("modules/pricing/table.css");
+
+
 /* states */
 
 @import url("state/state.css");
