--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -15,3 +15,11 @@ a {
     color: var(--primary-color);
     text-decoration: none;
 }
+
+fieldset {
+    border: none;
+}
+
+input, textarea {
+    outline: none;
+}
