main-section media query

--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -23,3 +23,9 @@ fieldset {
 input, textarea {
     outline: none;
 }
+
+button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
