intro-section paragraph

--- a/assets/style/media-queries/800px/index-media-query-800px.css
+++ b/assets/style/media-queries/800px/index-media-query-800px.css
@@ -22,3 +22,8 @@
 @import url("layout/main-section.css");
 
 @import url("modules/main-section/image-container.css");
+
+
+/* intro-section */
+
+@import url("modules/intro-section/paragraphs.css");
